--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,9 +2,9 @@
     <div class="banner-text">
         <h3>Working hard to become a better parent?</h3>
         <h5>When your children are blah blah blah annoyed, distracted, bored, unwilling to complete their tasks, we've got you covered blah blah. Help your child to become a better being.</h5>
-        <div>
+        <div class="btn-get-started">
         <%= link_to new_parent_registration_path do %>
-        <h5>Get Started</h5>
+        <h5>Get Started <%= icon('fas', 'chevron-right') %> </h5>
         <% end %></div>
     </div>
 </div>
