--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,7 +15,7 @@ body {
   border-radius: 10px;
   background: #FDD166;
   padding: 20px 40px;
-  width: 35%;
+  width: 500px;
   position: absolute;
   top: 20%;
   left: 10%;
@@ -26,7 +26,7 @@ body {
   }
 
 
-  a {
+  .btn-get-started a {
     color: #888;
     &:hover {
     text-decoration: none;
