--- a/app/views/reward_requests/create.js.erb
+++ b/app/views/reward_requests/create.js.erb
@@ -1,6 +1,6 @@
 function requestReward(requestHTML, unlinkHTML) {
-  const state = document.getElementById("<%= @reward.name.strip.split[0] %>-request-state");
-  const requestLink = document.getElementById("<%= @reward.name.strip.split[0] %>-request-link");
+  const state = document.getElementById("<%= @reward.name.strip.split.join %>-request-state");
+  const requestLink = document.getElementById("<%= @reward.name.strip.split.join %>-request-link");
   state.innerHTML = requestHTML;
   requestLink.innerHTML = unlinkHTML;
 }
