--- a/app/assets/stylesheets/pages/_playground.scss
+++ b/app/assets/stylesheets/pages/_playground.scss
@@ -2,7 +2,8 @@
   display: block;
   border: 1px solid black;
   border-radius: 3px;
-  width: 30%;
+  min-width: 150px;
+  max-width: 50%;
   padding: 15px;
 }
 
