fixed ajax id uniqueness and seeds bug

--- a/app/views/children/_rewards.html.erb
+++ b/app/views/children/_rewards.html.erb
@@ -25,12 +25,15 @@
               <div id="<%= reward.name.strip.split.join %>-request-state">(last request:
                   <%= reward.reward_requests.last.state %>)
               </div>
-          <% else %>
-          <div id="reward-request-link">
+
+          <% else %> <!-- no reward requests yet -->
+              <div id="<%= reward.name.strip.split.join %>-request-link">
                   <%= link_to reward_reward_requests_path(reward), remote: true, method: :post do %>
-                  <%= reward.name %>
+                      <%= reward.name %>
                   <% end %>
-                </div>
+              </div>
+
+              <div id="<%= reward.name.strip.split.join %>-request-state"></div>
           <% end %>
         </div>
         <% end %>
