--- a/app/views/reward_requests/update.js.erb
+++ b/app/views/reward_requests/update.js.erb
@@ -1,5 +1,5 @@
 function updateState(newState) {
-  const requestState = document.getElementById("<%= @reward_request.reward.name.strip.split.join %>-actions");
+  const requestState = document.getElementById("<%= @reward_request.child.name.strip %>-<%= @reward_request.reward.name.strip.split.join %>-actions");
   requestState.innerHTML = newState;
 }
 
