add child modal

--- a/app/views/children/new.html.erb
+++ b/app/views/children/new.html.erb
@@ -1,6 +1,6 @@
 <h2>Add a Child</h2>
 
-<%= simple_form_for(@child, url: child_path) do |f| %>
+<%= simple_form_for(@child, url: add_child_path) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
