--- a/app/views/parents/dashboard.html.erb
+++ b/app/views/parents/dashboard.html.erb
@@ -7,7 +7,8 @@
         <div class="row">
             <div class="col-xs-12 col-md-3">
                 <h2>Welcome!</h2>
-                <h5><%= current_parent.name %> (<%= current_parent.email %>)</h5>
+                <h5>The <%= current_parent.name %> Family</h5>
+                <p>(<%= current_parent.email %>)</p>
                 <div><%= render 'tasks' %></div>
                 <div><%= render 'rewards' %></div>
             </div>
