--- a/app/views/parents/_children.html.erb
+++ b/app/views/parents/_children.html.erb
@@ -1,12 +1,10 @@
-<h3>Children</h3>
 
-    <%= render 'add_child', child: @child %>
-
+<div class="children-banner"> <h3>The <%= current_parent.name %> Family</h3></div>
 <div class="childrens-list">
     <ul style="list-style: none;">
         <% current_parent.children.each do |child| %>
         <li class="each-child">
-            <h5><%= child.name %></h5>
+            <h4 style='font-weight: bold;'><%= child.name %></h4>
             <% if child.reward_requests.any? %>
             <h5>Wishlist:</h5>
             <div class="child-wishlist">
@@ -36,13 +34,12 @@
                     <% end %>
                     </div>
                     <% end %>
-
             </div>
             <% end %>
             <% child.tasks.each do |task| %>
-            <div class="each-task">
-              <div class="task-name">
-               Task: <%= task.objective.capitalize %>
+            <div class="each-task" style="text-align: center;">
+              <div class="dashboard-task-name">
+               <%= task.objective.capitalize %>
                 </div>
                 <div class="task-details">
                    <p><%= task.key_results %></p>
@@ -64,8 +61,8 @@
                                       <% end %></span>
                         </div>
                         <% else %>
-                        <div id="submission-state">
-                        <%= submission.state > 0 ? "(Approved)" : "(Disapproved)" %>
+                        <div id="submission-state" style="text-align: center;">
+                        <%= submission.state > 0 ? " (Approved)" : " (Disapproved)" %>
                         </div>
                         <% end %>
                     <!------------------------------------------>
@@ -87,7 +84,7 @@
     </ul>
 </div>
 <script>
-const tasks = document.querySelectorAll(".task-name");
+const tasks = document.querySelectorAll(".dashboard-task-name");
 tasks.forEach(task => {
     task.addEventListener('click', event => {
         event.target.nextElementSibling.classList.toggle("visible-task-details");
