--- a/app/views/parents/_tasks.html.erb
+++ b/app/views/parents/_tasks.html.erb
@@ -1,4 +1,4 @@
-<h3>Tasks:</h3>
+<h3>Tasks: <%=cl_image_tag 'list_1'%></h3>
 <div>
     <!-- Trigger/Open The Modal -->
     <div class="test btn-add-object">Add Tasks</div>
