--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -18,7 +18,9 @@
 }
 
 .submission-details {
-  box-shadow: 2px 2px 2px #888888;
+  box-shadow: 1px 1px 10px #888888;
+  width: 600px;
+  height: 400px;
 
 }
 
@@ -35,14 +37,15 @@
   padding: 10px;
   width: 250px;
   transition: ease-in-out 250ms;
-  border:1px solid white;
   border-radius: 10px;
   background-color:rgb(253, 208, 102);
   color:white;
   font-weight:bold;
+   box-shadow: 3px 3px 3px #888888;
+  margin:10px;
   &:hover {
     cursor: pointer;
-    opacity: 0.7;
+    opacity: 0.8;
   }
 }
 
@@ -51,6 +54,7 @@
   border-radius: 15px;
   height:50px;
   color:white;
+   box-shadow: 2px 2px 2px #888888;
   h3 {
     padding:10px;
     font-weight:bold;
