--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="homepage-banner" style="background-image: url('<%= cl_image_path 'painful_grownup' %>')">
+<div class="homepage-banner" style="background-image: url('<%= cl_image_path 'home-updated' %>')">
     <div class="banner-text">
         <h3>Working hard to become a better parent?</h3>
         <h5>When your children are blah blah blah annoyed, distracted, bored, unwilling to complete their tasks, we've got you covered blah blah. Help your child to become a better being.</h5>
