--- a/app/views/children/playground.html.erb
+++ b/app/views/children/playground.html.erb
@@ -1,11 +1,51 @@
-<div class="container">
+<canvas id="playground-canvas" style="background-image: url('<%= image_path 'pg' %>');">
+
+  <%= image_tag 'quest', id: 'btn-quests'; %>
+  <%= image_tag 'current', id: 'current-pos'; %>
+  <%= image_tag 'pika', id: 'pika'; %>
+  <%= image_tag 'egg', id: 'egg'; %>
+
+
+</canvas>
+
+
+<!-- ####################################################### -->
+<!-- <div class="container">
     <div class="container text-center">
-        <h2><%= current_child.name %></h2>
-        <h5><%= current_child.point %> points</h5>
-        <h4> [===============--------] <%= icon('fas', 'bomb') %></h4>
+        <h2><%#= current_child.name %></h2>
+        <h5><%#= current_child.point %> points</h5>
+        <h4> [===============--------] <%#= icon('fas', 'bomb') %></h4>
 
     </div>
-    <%= render 'rewards' %>
+    <%#= render 'rewards' %>
     <hr>
-    <%= render 'tasks' %>
+    <%#= render 'tasks' %>
 </div>
+ -->
+ <!-- ####################################################### -->
+<script>
+const canvas = document.getElementById('playground-canvas');
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+const ctx = canvas.getContext("2d");
+// ctx.fillStyle = "rgba(251, 232, 230, 0.5)";
+// ctx.fillRect(0,0,1500,750);
+// ctx.beginPath();
+// ctx.arc(495,550,10,0,2*Math.PI);
+// ctx.stroke();
+
+// quest icon at top left corder
+const img = document.getElementById("btn-quests");
+console.log(img);
+ctx.drawImage(img, 50, 50);
+/////
+
+
+const current = document.getElementById("current");
+const pika = document.getElementById("pika");
+const egg = document.getElementById("egg");
+ctx.drawImage(egg, 450, 500);
+// ctx.drawImage(img, 50, 50);
+// ctx.drawImage(img, 50, 50);
+
+</script>
