--- a/app/views/parents/dashboard.html.erb
+++ b/app/views/parents/dashboard.html.erb
@@ -2,7 +2,7 @@
 <!-- add child button, children list with status -->
 <!-- create task button, mandatory tasks list -->
 <!-- create reward button, daily rewards list  -->
-<div class="dashboard-wrapper" style='background-color: rgb(243, 247, 246)'>
+<div class="dashboard-wrapper" style='background-color: rgb(243, 247, 246) height:100vh;'>
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-md-3" >
