--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,35 +1,16 @@
 .btn-add-object {
-    width: 150px;
-    text-align: center;
-    border-radius: 3px;
-    padding: 5px;
-    background-color: rgb(124, 190, 49);
-    color: white;
-    font-weight: bold;
-
-    a {
-        color: white;
-        font-weight: bold;
-
-        &:hover {
-            text-decoration: none;
-        }
-    }
-
+  margin-left: 10px;
     &:hover {
         cursor:pointer;
         opacity: 0.7;
     }
 }
 
-
-
 .test {
-    padding: 5px;
-    border-radius: 5px;
 
     &:hover {
       font-weight:bold;
       cursor:pointer;
     }
 }
+
