--- a/app/assets/stylesheets/pages/_playground.scss
+++ b/app/assets/stylesheets/pages/_playground.scss
@@ -1,10 +1,12 @@
   .task-details {
   display: none;
-  border: 1px solid black;
-  border-radius: 3px;
+  border: 2px solid ;
+  border-radius: 0px 40px 40px 40px;
   min-width: 150px;
-  max-width: 50%;
+  max-width: 700px;
   padding: 15px;
+  text-align:left;
+
 }
 
 .task-list {
@@ -34,6 +36,7 @@
 
 .visible-task-details {
   display: block;
+
 }
 
 .btn-make-submission {
