--- a/app/views/children/_tasks.html.erb
+++ b/app/views/children/_tasks.html.erb
@@ -1,7 +1,7 @@
-<div class="container all-tasks">
-    <div class="text-center">
-        <%= image_tag 'choreslist.png', height: 70 %>
-    </div>
+<div class="all-tasks">
+    <!--     <div class="text-center">
+        <%#= image_tag 'choreslist.png', height: 70 %>
+    </div> -->
     <h4><%= icon('fas', 'chevron-right') %> Today's Quests:</h4>
     <ul class="task-list">
         <% @tasks.select(&:mandatory).each do |task| %>
@@ -15,69 +15,64 @@
                     <%= task.key_results %>
                 </p>
                 <hr>
-
                 <% if task.task_submissions.any? %>
-                      <% if task.task_submissions.last.state.zero? %>
-                      Submission status: Pending...
-
-                      <% elsif task.task_submissions.last.state.positive? %>
-                      Submission status: Approved!
-
-                      <% else %>
-                      Submission status: Disapproved. Please submit again!
-<div class="btn-make-submission">
-    Make a submission
-</div>
-<div style="display: none;">
-<%= simple_form_for [task, task.task_submissions.new] do |f| %>
-<%= f.input :comment %>
-<%= f.input :photo %>
-<%= f.submit %>
-<% end %>
-</div>
-
-
-                      <% end %>
-
+                <% if task.task_submissions.last.state.zero? %>
+                Submission status: Pending...
+                <% elsif task.task_submissions.last.state.positive? %>
+                Submission status: <%= icon('fas', 'check') %>
                 <% else %>
-<div class="btn-make-submission">
-    Make a submission
-</div>
-<div style="display: none;">
-<%= simple_form_for [task, task.task_submissions.new] do |f| %>
-<%= f.input :comment %>
-<%= f.input :photo %>
-<%= f.submit %>
-<% end %>
-</div>
+                Submission status: <%= icon('fas', 'times') %> Please submit again!
+                <div class="btn-make-submission">
+                    Make a submission
+                </div>
+                <div style="display: none;">
+                    <%= simple_form_for [task, task.task_submissions.new] do |f| %>
+                    <%= f.input :comment %>
+                    <%= f.input :photo %>
+                    <%= f.submit %>
+                    <% end %>
+                </div>
                 <% end %>
-
+                <% else %>
+                <div class="btn-make-submission">
+                    Make a submission
+                </div>
+                <div style="display: none;">
+                    <%= simple_form_for [task, task.task_submissions.new] do |f| %>
+                    <%= f.input :comment %>
+                    <%= f.input :photo %>
+                    <%= f.button :button, class: 'send-submission', type: :submit do %>
+                      <%= icon('fas', 'check') %>
+                    <% end %>
+                    <% end %>
+                </div>
+                <% end %>
             </div>
         </li>
         <% end %>
     </ul>
-    <br>
-    <h4><%= icon('fas', 'chevron-right') %> Ultimate Tasks:</h4>
+    <!---------------------- Optional Tasks UNFINISHED -->
+    <!-- <br>
+    <h4><%#= icon('fas', 'chevron-right') %> Ultimate Tasks:</h4>
     <ul>
-        <% @tasks.reject(&:mandatory).each do |task| %>
+        <%# @tasks.reject(&:mandatory).each do |task| %>
         <li>
-            <h5><%= task.objective.capitalize %></h5>
+            <h5><%#= task.objective.capitalize %></h5>
             <div class="task-details">
                 <p>
-                    <%= task.key_results %>
+                    <%#= task.key_results %>
                 </p>
-                <%= link_to new_task_task_submission_path(task) do %>
-                Make a submission
-                <% end %>
+                <%#= link_to 'Make a submission', new_task_task_submission_path(task) %>
             </div>
         </li>
-        <% end %>
-    </ul>
+        <%# end %>
+    </ul> -->
+    <!----------------------- RE-IMPLEMENT LATER -->
 </div>
 <!------------------>
 <script>
-const tasks = document.querySelectorAll(".task-name");
-tasks.forEach(task => {
+const allTasks = document.querySelectorAll(".task-name");
+allTasks.forEach(task => {
     task.addEventListener('click', event => {
         event.target.nextElementSibling.classList.toggle("visible-task-details");
         event.target.classList.toggle("active-task");
@@ -87,9 +82,8 @@ tasks.forEach(task => {
 const submissionsBtns = document.querySelectorAll(".btn-make-submission");
 submissionsBtns.forEach(makeSubmission => {
     makeSubmission.addEventListener('click', event => {
-      const d = makeSubmission.nextElementSibling.style.display;
-      makeSubmission.nextElementSibling.style.display = d == 'none' ? 'block' : 'none';
-  })
+        const d = makeSubmission.nextElementSibling.style.display;
+        makeSubmission.nextElementSibling.style.display = d == 'none' ? 'block' : 'none';
+    })
 })
-
 </script>
