--- a/app/views/parents/_rewards.html.erb
+++ b/app/views/parents/_rewards.html.erb
@@ -1,7 +1,7 @@
 <div class='add-feature'>
     <%=cl_image_tag 'gift_1', height: 34, width: 34, class: "dashboard-icon"%>
     <h3> Rewards:</h3>
-    <%=cl_image_tag 'plus', height: 34, width: 34,class: "test btn-add-object" %>
+    <%=cl_image_tag 'plus', height: 34, width: 34,class: "test btn-add-object dashboard-icon" %>
 </div>
 <div>
     <!-- The Modal -->
