--- a/app/views/children/playground.html.erb
+++ b/app/views/children/playground.html.erb
@@ -17,7 +17,7 @@
 
 </canvas> -->
 <!-- ####################################################### -->
-<div id="playground-map" style="background-image: url('<%= image_path 'pg' %>');">
+<div id="playground-map" style="background-image: url('<%= cl_image_path 'pg' %>');">
     <div>
         <div class="col-md-3 todays-quests">
           <div class="text-center">
