--- a/app/views/children/_rewards.html.erb
+++ b/app/views/children/_rewards.html.erb
@@ -1,6 +1,6 @@
 <div class="all-rewards">
   <div class="text-center">
-    <h4><%= image_tag 'yay', height: 50 %> <!-- <strong>Rewards</strong> --></h4>
+    <h4><%= cl_image_tag 'yay', height: 50 %> <!-- <strong>Rewards</strong> --></h4>
     </div>
     <div class="requests-status-list">
         <% if current_child.tasks.select(&:mandatory).any? && current_child.tasks.select(&:mandatory).all? {|task| task.task_submissions.any? ? task.task_submissions.last.state == 1 : false } %>
