--- a/app/views/children/playground.html.erb
+++ b/app/views/children/playground.html.erb
@@ -31,7 +31,7 @@
         </div>
         <div class="col-md-offset-3">
             <div class="pos1"></div>
-            <div id="pikachu"> <%= image_tag 'pika' %> </div>
+            <div id="pikachu"> <%= cl_image_tag 'pika' %> </div>
         </div>
     </div>
 </div>
