--- a/app/views/children/playground.html.erb
+++ b/app/views/children/playground.html.erb
@@ -19,23 +19,47 @@
 <!-- ####################################################### -->
 <div id="playground-map" style="background-image: url('<%= cl_image_path 'pg' %>');">
     <div>
-        <div class="col-md-3 todays-quests">
+        <div class="todays-quests">
           <div class="text-center">
             <h2><%= current_child.name %></h2>
-            <h5><%= current_child.point %> points <%= icon('fas', 'bomb') %></h5>
+            <h5><%= current_child.point %> points <span id="btn-catch-pika"><%= icon('fas', 'bomb') %></span></h5>
             <%= render 'rewards' %>
             <hr>
             </div>
 
             <%= render 'tasks' %>
         </div>
-        <div class="col-md-offset-3">
-            <div class="pos1"></div>
             <div id="pikachu"> <%= cl_image_tag 'pika' %> </div>
-        </div>
+            <div id="pos-1" class="pos-current"> <%= cl_image_tag 'current' %> </div>
+            <div id="pos-2"></div>
+            <div id="pos-3"></div>
+            <div id="pos-4"></div>
+            <div id="pos-5"></div>
+            <div id="pos-6"></div>
+            <div id="pos-7"></div>
+            <div id="pos-8"></div>
+            <div id="pos-9"></div>
+            <div id="pos-10"></div>
+
+
     </div>
 </div>
 <!-- ####################################################### -->
+<script>
+  const btnCatch = document.getElementById('btn-catch-pika');
+  btnCatch.addEventListener('click', event => {
+    const current = document.querySelector('.pos-current');
+    const next = current.nextElementSibling != null ? current.nextElementSibling : document.getElementById('pos-1');
+
+    current.classList.remove('pos-current');
+    current.innerHTML = "";
+
+    next.classList.add('pos-current');
+    next.innerHTML = `<%= cl_image_tag 'current' %>`;
+  })
+
+</script>
+
 <!-- <script>
 const canvas = document.getElementById('playground-canvas');
 canvas.width = window.innerWidth;
