dividing tasks and details

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -29,15 +29,15 @@
 }
 
 .task-group {
-  display:flex;
+  // display:flex;
 
 }
 
 
 .each-task {
   border-radius: 5px;
-  display:flex;
-  flex-direction:column;
+  // display:flex;
+  // flex-direction:column;
 }
 
 .dashboard-task-name {
